<resources>
    <string name="app_name">lab08</string>
    <string name="android_atc_pizza_shop">Android ATC Pizza Shop</string>
    <string name="schedule_a_pickup">Schedule a Pickup</string>
    <string name="schedule">Schedule</string>
    <string name="selected_time">Selected Time</string>
    <string name="selected_date">Selected Date</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_size">Select Size</string>
    <string name="select_your_pizza_size">Select Your Pizza Size:</string>
    <string name="price_small_5_medium_7_large_11_extra_large_14">Price Small $5, Medium $7, Large $11, Extra Large $14</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="full_name">Full Name</string>
    <string name="size">Size</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="send">Send</string>
    <string name="we_appreciate_your_feedback_please_leave_a_review">We appreciate your feedback please leave a review!</string>
</resources>