<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/standard_padding"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/android_atc_pizza_shop"
        android:textSize="24sp"
        android:layout_marginTop="28dp"
        android:textColor="@color/Amaranth"
        android:textAlignment="center"
        />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="Pizza Picture"
        android:src="@drawable/pizza"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_a_pickup"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/standard_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/myFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="14sp"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:inputType="text"
        android:hint="@string/enter_full_name"
        android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/myPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="14sp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:autofillHints="Enter Phone Number"
            android:hint="@string/enter_phone_number"
            android:inputType="number"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/price_small_5_medium_7_large_11_extra_large_14"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/select_your_pizza_size"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="4"
            android:id="@+id/sizeSeekBar"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/sizeTextView"
            android:text="@string/select_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/select_date"
            android:id="@+id/dateBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            android:id="@+id/timeBtn"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_date"
            android:layout_marginEnd="50dp"
            android:id="@+id/dateTextView"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_time"
            android:id="@+id/timeTextView"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/Amaranth"
        android:id="@+id/scheduleBtn"/>

</LinearLayout>